# all-erp

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  DOCKERFILE-GUIDE.md  Dockerfile.ai.dev  Dockerfile.backend.dev  Dockerfile.dev  Dockerfile.frontend.dev  Dockerfile.prod  README.md  components.json  erp  eslint.config.mjs  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  project.json  tsconfig.base.json  vitest.integration.config.ts
.gemini/: GEMIMI.md  GEMINI.md
apps/ai/ai-service/: .env.example  .env.sample  Dockerfile  Dockerfile.dev  README.md  jest.config.ts  project.json  pyproject.toml  webpack.config.js
apps/ai/ai-service/app/: main.py
apps/ai/ai-service/app/api/v1/: accounting.py  anomaly.py  chat.py  documents.py
apps/ai/ai-service/src/: main.ts
apps/ai/ai-service/src/app/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.spec.ts  app.service.ts
apps/ai/ai-service/src/app/ai/: ai.controller.ts  ai.module.ts  llm.service.ts  rag.service.ts  vector-store.service.ts
dev-environment/: .env.example  GETTING-STARTED.md  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.devops.yml  docker-compose.frontend.dev.yml  docker-compose.frontend.prod.yml  docker-compose.frontend.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  generate-all-prisma.sh  init-envs.sh  start-dev.sh  start-frontend-dev.sh  start-frontend.sh  stop-dev.sh  stop-frontend.sh
docs/: FILE_CLEANUP_REPORT.md  README-MICROSERVICES-PLAN.md  README.md  (+1 more)
(+1160 files in other folders)
