[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI Domain Service with RAG, OCR, and Anomaly Detection"
authors = ["All-ERP Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
